fixed stars behind images and text

--- a/scss/partials/_stars.scss
+++ b/scss/partials/_stars.scss
@@ -18,7 +18,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
 }
 
 .stars1 {
