--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -5,11 +5,9 @@ body {
 /* SWIPER */
 
 .swiper {
-    width: 100vw;
+    width: 98vw;
     height: 80vh;
-    .swiper-slide {
-        background-image: linear-gradient(#000, #130025);
-    }
+
 }
 
 /* SLIDES */
